--- a/quickcom-server/package.json
+++ b/quickcom-server/package.json
@@ -11,11 +11,13 @@
 	},
 	"dependencies": {
 		"@types/node": "^22.7.4",
+		"cors": "^2.8.5",
 		"express": "^4.21.0",
 		"nanoid": "^5.0.7",
 		"typescript": "^5.6.2"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
 		"nodemon": "^3.1.7",
 		"ts-node": "^10.9.2"
