--- a/quickcom-server/package.json
+++ b/quickcom-server/package.json
@@ -11,10 +11,11 @@
 	},
 	"dependencies": {
 		"@types/node": "^22.7.4",
+		"@types/uuid": "^10.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.21.0",
-		"nanoid": "^5.0.7",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
