--- a/quickcom-server/package.json
+++ b/quickcom-server/package.json
@@ -7,7 +7,9 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "node dist/server.js",
-		"dev": "nodemon src/server.ts"
+		"dev": "nodemon src/server.ts",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"dependencies": {
 		"@types/node": "^22.7.4",
@@ -20,7 +22,12 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/jest": "^29.5.13",
+		"@types/supertest": "^6.0.2",
+		"jest": "^29.7.0",
 		"nodemon": "^3.1.7",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2"
 	}
 }
